[package]
name = "pay-respects-parser"
version = "0.2.3"
edition = "2021"

# for crates.io
description = "Compile time rule parser for pay-respects"
repository = "https://github.com/iffse/pay-respects-parser"
license = "AGPL-3.0"
include = [
	"**/*.rs",
	"**/*.toml",
]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
